test: amplia cobertura de testes e adiciona documentação Swagger